--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.customModal {
+  background: #b2dbbf;
+  width: 700px;
+  padding: 30px 40px !important;
+  height: 400px;
+  border-radius: 10px;
+  overflow: hidden;
+}
